# chipmos-APS

./: .clang-format  .gitignore  CMakeLists.txt  Location For WB.csv  Makefile  README.md  config.json  config_sample.json  machine.csv  main.cpp  main.cpp.autosave  main.py  output.py  plot.py  plot_2.py  requirements.txt  result(0707_2).csv  wb7.cpp
.github/workflows/: build.yml  build_test.yml  test.yml
examples/: CMakeLists.txt
examples/csv/: CMakeLists.txt  main.cpp
examples/linked_list/: list_item.cpp  list_item.h  main.cpp
include/: algorithm.h  arg_parser.h  arrival.h  chromosome.h  chromosome_base.h  common.h  condition_card.h  csv.h  da.h  def.h  entities.h  entity.h  info.h  infra.h  job.h  job_base.h  linked_list.h  lot.h  lot_base.h  lots.h  machine.h  machine_base.h  machine_constraint.h  machine_constraint_a.h  machine_constraint_r.h  machines.h  on_entity_lot.h  parameters.h  population.h  progress.h  record_gap.h  route.h  system_log.h  time_converter.h  wip_lot.h
lib/: CMakeLists.txt  chromosome_base.c  chromosome_base.cu  common.c  common.cpp  csv.cpp  job_base.c  job_base.cpp  job_base.cu  linked_list.c  linked_list.cu  machine_base.c  machine_base.cu  process_time.cpp
scripts/: hooks_installation.sh  pre-commit.sh
src/: CMakeLists.txt  algorithm.cpp  arg_parser.cpp  arrival.cpp  chromosome.cpp  common.cpp  condition_card.cpp  csv.cpp  da.cpp  entities.cpp  entity.cpp  info.c  infra.cpp  job.cpp  lot.cpp  lot_base.cpp  lots.cpp  machine.cpp  machine_constraint.cpp  machine_constraint_a.cpp  machine_constraint_r.cpp  machines.cpp  population.cu  progress.c  record_gap.cpp  route.cpp  system_log.cpp  time_converter.cpp  wip_lot.cpp
tests/: CMakeLists.txt  main.cpp
tests/include/: test_linked_list.h  test_machine_base.h
tests/private/: test_chromosome_base.cu  test_job_base.cu  test_linked_list.cu  test_machine_base.cu
tests/test_algorithm/: test_stage2Scheduling.cpp
tests/test_chromosome_base/: main.cpp  test_chromosome_base_device.cu  test_chromosome_base_host.cpp
tests/test_csv/: test_csv_parse.cpp  test_csv_read.cpp
tests/test_entities/: test_entities_ctor.cpp  test_entities_read_dedicate_machines_file.cpp
tests/test_entity/: test_ctor.cpp  test_entity.cpp
tests/test_infrastructure/: test_is_numeric.cpp  test_string_to_info.cpp  test_time_converter.cpp
tests/test_job_base/: 1  CMakeLists.txt  ms_file_generate.cpp  test_job_base.cpp  test_job_base.cu  test_job_base.h  test_job_base_device.cu  test_job_base_host.cpp
tests/test_linked_list/: CMakeLists.txt  test_linked_list.cu  test_linked_list.h  test_linked_list_device.cu  test_linked_list_device_opt.cu  test_linked_list_host.cpp
tests/test_lot/: test_automotive.cpp  test_lot.cpp  test_lot_addlog.cpp  test_lot_base_ctor.cpp  test_lot_base_setupDefaultValueOfRow.cpp  test_lot_check.cpp  test_lot_ctor.cpp  test_wip_lot_ctor.cpp
tests/test_lots/: test_lots.cpp
tests/test_machine_base/: CMakeLists.txt  test_machine_base.cu  test_machine_base.h  test_machine_base_device.cu  test_machine_base_host.cpp
tests/test_machine_constraint/: test_machine_constraint_a.cpp  test_machine_constraint_base.cpp  test_machine_constraint_base.h  test_machine_constraint_r.cpp  test_transform_attr_to_regex_string.cpp
tests/test_machines/: test_machines.cpp  test_machines_addGroupJobs.cpp  test_machines_addMachine.cpp  test_machines_addNewResource.cpp  test_machines_addPrescheduledJob.cpp  test_machines_canJobRunOnTheMachine.cpp  test_machines_chooseMachineForAGroup.cpp  test_machines_distributeAResource.cpp  test_machines_groupBy.cpp  test_machines_isDedicatedMachine.cpp  test_machines_prescheduleJobs.cpp  test_machines_scheduleAGroup.cpp  tmp2
tests/test_route/: test_calculate_queue_time.cpp  test_get_cure_time.cpp  test_is_in_stations.cpp  test_oper_index.cpp  test_route.cpp  test_route.h  test_route_queue_time.cpp  test_setup_before_station.cpp  test_setup_cure_time.cpp  test_setup_stations_before_wb.cpp
