file(GLOB_RECURSE cpp_src_files ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE c_src_files ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
# message("cpp source file : ${src_files}")
add_library(src STATIC ${cpp_src_files} ${c_src_files}) 
target_compile_features(src PUBLIC cxx_std_11)
target_include_directories(src PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
