find_package(GTest)
find_package(CUDA REQUIRED)
include_directories(${GTest_INCLUDE_DIRS})
file(GLOB_RECURSE cppsources ${CMAKE_CURRENT_SOURCE_DIR}/test_*.cpp)
file(GLOB_RECURSE cusources ${CMAKE_CURRENT_SOURCE_DIR}/*.cu)
add_executable(TestJobBase main.cpp ${cppsources} ${cusources})
add_executable(MsFileGenerate ms_file_generate.cpp)
set_property(TARGET TestJobBase PROPERTY CUDA_SEPARABLE_COMPILATION ON)
target_link_libraries(TestJobBase lib ${GTest_LIBS} gtest gtest_main Threads::Threads ${CUDA_LIBRARIES})
