find_package(GTest)
find_package(CUDA REQUIRED)
include_directories(${GTest_INCLUDE_DIRS})
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -G")
file(GLOB_RECURSE cppsources ${CMAKE_CURRENT_SOURCE_DIR}/test_*.cpp)
file(GLOB_RECURSE cusources ${CMAKE_CURRENT_SOURCE_DIR}/*.cu)
add_executable(TestLinkedList main.cpp ${cppsources} ${cusources})
add_executable(ArraysGenerator generator.cpp)
set_property(TARGET TestLinkedList PROPERTY CUDA_SEPARABLE_COMPILATION ON)
target_link_libraries(TestLinkedList lib ${GTest_LIBS} gtest gtest_main Threads::Threads ${CUDA_LIBRARIES} cudart cuda)
